@@ -185,6 +185,18 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - fix to prevent a possible segfault when using checkpointing.
   e - Added the server parameters job_log_file_max_size, job_log_file_roll_depth and
       job_log_keep_days to help manage job log files.
+  e - Created the ability to log all jobs to a file. The new file is located
+      under $TORQUE_HOME/job_logs. The file follows the same naming format
+      as server_logs and mom_logs. The name is derived from the current date.
+      This log file is optional. It can be activated using a new server
+      parameter record_job_info. By default this is false. If set to true it
+      will begin recording every job record when the job is purged.
+  e - Created the ability to log all jobs to a file. The new file is located
+      under $TORQUE_HOME/job_logs. The file follows the same naming format
+      as server_logs and mom_logs. The name is derived from the current date.
+      This log file is optional. It can be activated using a new server
+      parameter record_job_info. By default this is false. If set to true it
+      will begin recording every job record when the job is purged.
   
 2.5.2
   e - Allow the nodes file to use the syntax node[0-100] in the name to 
